Use bigger VDB buffer and reduce flickering

--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -130,6 +130,7 @@ extends = sunton-esp32-s3-tft, esp32s3_16mb_v2
 build_flags =
     ${sunton-esp32-s3-tft.build_flags}
     -D HASP_MODEL="Sunton ESP32-8048S043C"
+    -D LV_VDB_SIZE=76800 ; 10% of full framebuffer
     -D TFT_WIDTH=800
     -D TFT_HEIGHT=480
     ; Bus Setttings
@@ -166,6 +167,7 @@ extends = sunton-esp32-s3-tft, esp32s3_16mb_v2
 build_flags =
     ${sunton-esp32-s3-tft.build_flags}
     -D HASP_MODEL="Sunton ESP32-8048S050C"
+    -D LV_VDB_SIZE=76800 ; 10% of full framebuffer
     -D TFT_WIDTH=800
     -D TFT_HEIGHT=480
     ; Bus Setttings
@@ -202,6 +204,7 @@ extends = sunton-esp32-s3-tft, esp32s3_16mb_v2
 build_flags =
     ${sunton-esp32-s3-tft.build_flags}
     -D HASP_MODEL="Sunton ESP32-8048S070C"
+    -D LV_VDB_SIZE=76800 ; 10% of full framebuffer
     -D TFT_WIDTH=800
     -D TFT_HEIGHT=480
     ; Bus Settings
