--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -7,6 +7,8 @@ debug_tool = esp-prog
 debug_init_break = tbreak setup
 board_build.embed_files =
     data/edit.htm.gz
+    data/openhasp.ttf
+    data/openhasplite.ttf
     data/style.css.gz
     data/script.js.gz
     data/cert/x509_crt_bundle.bin
