--- a/.gitignore
+++ b/.gitignore
@@ -8,11 +8,12 @@ bin/*
 data/*
 !data/edit.htm
 !data/edit.htm.gz
-!data/vars.css
+!data/openhasp.ttf
 !data/style.css
 !data/style.css.gz
 !data/script.js
 !data/script.js.gz
+!data/vars.css
 !data/cert/
 !data/cert/x509_crt_bundle.bin
 !data/static/
