--- a/user_setups/esp32/freetouchdeck.ini
+++ b/user_setups/esp32/freetouchdeck.ini
@@ -10,9 +10,8 @@ board = esp32dev
 build_flags =
     ${env.build_flags}
     ${esp32.build_flags}
+    ${esp32.ps_ram}
     -D HASP_MODEL="FreeTouchDeck"
-    -DBOARD_HAS_PSRAM               ; uses 78kB
-    ;-mfix-esp32-psram-cache-issue  ; uses 24kB
 
 ;region -- TFT_eSPI build options ------------------------
     ${esp32.vspi}        ; Use VSPI hardware SPI bus
