--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -8,7 +8,7 @@ debug_init_break = tbreak setup
 board_build.embed_files =
     data/edit.htm.gz
     data/openhasp.ttf
-    data/openhasplite.ttf
+    ; data/openhasplite.ttf
     data/style.css.gz
     data/script.js.gz
     data/cert/x509_crt_bundle.bin
