Update TFT_eSPI to 2.4.79 and exclude PubSubClient

--- a/user_setups/esp32s3/_esp32s3.ini
+++ b/user_setups/esp32s3/_esp32s3.ini
@@ -33,6 +33,7 @@ build_flags =
     ;-D USE_DMA_TO_TFT
 ; -- openHASP build options ------------------------
     -D HASP_ATTRIBUTE_FAST_MEM=IRAM_ATTR
+    -D HASP_USE_LVGL_TASK=0
     -D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
@@ -73,8 +74,8 @@ lib_ignore =
 lib_deps =
     git+https://github.com/fvanroie/ConsoleInput.git#dev
     bxparks/AceButton@^1.9.2         ; GPIO button library
-    bblanchon/StreamUtils@^1.6.3     ; for EEPromStream and BufferedTelnetClient
-    knolleary/PubSubClient@^2.8.0    ; MQTT client
+    bblanchon/StreamUtils@^1.7.0     ; for EEPromStream and BufferedTelnetClient
+    ; knolleary/PubSubClient@^2.8.0    ; MQTT client
 
 extra_scripts =
     pre:tools/auto_firmware_version.py
