--- a/platformio.ini
+++ b/platformio.ini
@@ -111,8 +111,8 @@ lib_deps =
 
 [tft_espi]
 lib_deps =
-    ;bodmer/TFT_eSPI@2.4.72
-    https://github.com/Bodmer/TFT_eSPI.git#master
+    bodmer/TFT_eSPI@2.4.79
+    ;https://github.com/Bodmer/TFT_eSPI.git#master
 
 [goodix]
 lib_deps =
