--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -76,7 +76,7 @@ lib_deps =
     ; lorol/LittleFS_esp32@^1.0.6    ; for Arduino v1 only
     bxparks/AceButton@^1.9.2         ; GPIO button library
     bblanchon/StreamUtils@^1.6.3     ; for EEPromStream and BufferedTelnetClient
-    knolleary/PubSubClient@^2.8.0    ; MQTT client
+    ; knolleary/PubSubClient@^2.8.0    ; MQTT client
 
 extra_scripts =
     pre:tools/auto_firmware_version.py
