--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -71,7 +71,7 @@ lib_deps =
     git+https://github.com/fvanroie/ConsoleInput.git#dev
     bxparks/AceButton@^1.9.2         ; GPIO button library
     bblanchon/StreamUtils@^1.6.3     ; for EEPromStream and BufferedTelnetClient
-    knolleary/PubSubClient@^2.8.0    ; MQTT client
+    ; knolleary/PubSubClient@^2.8.0    ; MQTT client
 
 ps_ram =
     -DBOARD_HAS_PSRAM
