Updated for new define HASP_USE_ETHSPI to allow ETHSPI to build

--- a/user_setups/esp32/lanbon_l8_eth.ini
+++ b/user_setups/esp32/lanbon_l8_eth.ini
@@ -58,7 +58,7 @@ build_flags =
     -D HASP_START_CONSOLE=0       ; Needs to be disabled as we use TX & RX for SPI
     -D HASP_USE_WIFI=0            ; Using Ethernet instead..
     -D HASP_USE_ETHERNET=1
-    -D HASP_USE_SPI_ETHERNET=1
+    -D HASP_USE_ETHSPI=1
     -D ETHSPI_HOST=HSPI_HOST
     -D ETHSPI_INT_GPIO=39
     -D ETHSPI_MOSI_GPIO=1
