Update to ArduinoJson 6.20.0 and Arduino 2.0.6

--- a/platformio.ini
+++ b/platformio.ini
@@ -81,7 +81,7 @@ build_flags =
 ; -- Shared library dependencies in all environments
 ; Warning : don't put comments after github links => causes infinite download loop
 lib_deps =
-    bblanchon/ArduinoJson@^6.19.4    ; Json(l) parser
+    bblanchon/ArduinoJson@^6.20.0
     ;git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
