--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -139,7 +139,8 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32_v2]
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.5/platform-espressif32-v.2.0.5.zip
+;platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.5/platform-espressif32-v.2.0.5.zip
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
