Use platform espressif32

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -140,7 +140,8 @@ board_build.partitions = user_setups/esp32/partitions_16MB.csv
 [arduino_esp32_v2]
 framework = arduino
 ;platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.5/platform-espressif32-v.2.0.5.zip
-platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
+;platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
+platform = espressif32
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
