--- a/user_setups/esp32s3/_esp32s3.ini
+++ b/user_setups/esp32s3/_esp32s3.ini
@@ -108,9 +108,9 @@ hspi =
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32s3_v2]
 framework = arduino
-;platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
+platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
 ;platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
-platform = espressif32
+;platform = espressif32
 board_build.filesystem = littlefs
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
