added compile template for TTGO T-Display v1 (esp32 version)

--- a/platformio_override-template.ini
+++ b/platformio_override-template.ini
@@ -62,6 +62,7 @@ extra_default_envs =
     ; ttgo-lilygo-pi_st7796
     ; ttgo-t7-v1.5_ili9341_16MB
     ; ttgo-t7-v1.5_ili9341_4MB
+    ; ttgo-esp32_tdisplay_v1
     ; wt32-sc01_16MB
     ; wt32-sc01_4MB
     ; wt32-sc01-plus_16MB
