--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -18,6 +18,7 @@ build_flags =
 
 ;region -- LovyanGFX build options ------------------------
     -D HASP_USE_ARDUINOGFX=1
+    -D HASP_LV_USE_SW_ROTATE=1
     -D TFT_BCKL=2
 ;endregion
 
@@ -27,6 +28,7 @@ lib_deps =
     ${esp32s3.lib_deps}
     ${arduino_esp32s3_v2.lib_deps}
     ${arduinogfx.lib_deps}
+    Arduino_RPi_DPI_RGBPanel_mod
     ${goodix.lib_deps}
 
 lib_ignore =
