Update ArduinoGFX driver

--- a/user_setups/esp32s3/zw3d95ce01s_ar.ini
+++ b/user_setups/esp32s3/zw3d95ce01s_ar.ini
@@ -44,8 +44,7 @@ lib_deps =
     ${env.lib_deps}
     ${esp32s3.lib_deps}
     ${arduino_esp32s3_v2.lib_deps}
-    ;${arduinogfx.lib_deps}
-    git+https://github.com/moononournation/Arduino_GFX.git
+    ${arduinogfx.lib_deps}
     ${ft6336.lib_deps}
 
 lib_ignore =
