--- a/platformio.ini
+++ b/platformio.ini
@@ -103,12 +103,13 @@ build_src_filter = +<*> -<.git/> -<examples/> -<test/> -<tests/> -<stm32f4/> -<l
 
 [lovyangfx]
 lib_deps =
-    lovyan03/LovyanGFX@^0.4.18
+    lovyan03/LovyanGFX@^0.5.0
 
 [arduinogfx]
 lib_deps =
-    moononournation/GFX Library for Arduino @ ^1.3.0
-
+    ;moononournation/GFX Library for Arduino @ ^1.3.0
+    git+https://github.com/moononournation/Arduino_GFX.git
+    
 [tft_espi]
 lib_deps =
     bodmer/TFT_eSPI@2.4.79
