Update ArduinoGFX driver

--- a/user_setups/esp32s3/gs-t3e.ini
+++ b/user_setups/esp32s3/gs-t3e.ini
@@ -46,6 +46,15 @@ build_flags =
     -D TOUCH_SDA=40
     -D TOUCH_SCL=41
     -D TOUCH_RST=-1
+    -D TFT_AUTO_FLUSH=1
+    -D TFT_HSYNC_POLARITY=1
+    -D TFT_HSYNC_FRONT_PORCH=10
+    -D TFT_HSYNC_PULSE_WIDTH=8
+    -D TFT_HSYNC_BACK_PORCH=50
+    -D TFT_VSYNC_POLARITY=1
+    -D TFT_VSYNC_FRONT_PORCH=10
+    -D TFT_VSYNC_PULSE_WIDTH=8
+    -D TFT_VSYNC_BACK_PORCH=20
 ;endregion
 
 ;region -- Library options -------------------------------
