Fix LVGL v7 bug #419

--- a/platformio.ini
+++ b/platformio.ini
@@ -85,8 +85,8 @@ lib_deps =
     ;git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
-    git+https://github.com/lvgl/lvgl.git#release/v7
-    ;lvgl/lvgl@^7.11.0                ; from PIO library
+    ;git+https://github.com/lvgl/lvgl.git#release/v7
+    git+https://github.com/HASwitchPlate/lvgl.git#release/v7
     ;git+https://github.com/lvgl/lv_fs_if.git#release/v7
     git+https://github.com/lvgl/lv_lib_png.git#release/v7
     git+https://github.com/lvgl/lv_lib_bmp.git#release/v7
