Update fonts and static web files

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -12,9 +12,13 @@ board_build.embed_files =
     data/style.css.gz
     data/script.js.gz
     data/cert/x509_crt_bundle.bin
+    ; -- new dynamic website files -------------------
     data/static/logo.svg.gz
     data/static/ace.1.9.6.min.js.gz
     data/static/petite-vue.hasp.js.gz
+    data/static/main.js.gz
+    data/static/en.json.gz
+    data/static/hasp.htm.gz
     
 build_flags =
     ${env.build_flags}
