--- a/user_setups/esp32/freetouchdeck.ini
+++ b/user_setups/esp32/freetouchdeck.ini
@@ -48,8 +48,7 @@ lib_deps =
     ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
-    ;${lovyangfx.lib_deps}
-    
+
 lib_ignore =
     ${env.lib_ignore}
     ${esp32.lib_ignore}
@@ -58,7 +57,7 @@ lib_ignore =
 
 
 [env:freetouchdeck_4MB]
-extends = freetouchdeck, esp32_4mb_v2
+extends = merge:freetouchdeck, esp32_4mb_v2
 
 [env:freetouchdeck_8MB]
-extends = freetouchdeck, esp32_8mb_v2
+extends = merge:freetouchdeck, esp32_8mb_v2
