Correct arduino_esp32_v2 ini flags

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -152,7 +152,13 @@ monitor_filters = esp32_exception_decoder
 extra_scripts =
     ${esp32.extra_scripts}
 lib_deps =
-lib_ignore = LittleFS_esp32    ; Not needed for Arduino v2
+    ${env.lib_deps}
+    ${esp32.lib_deps}
+
+lib_ignore =
+    ${env.lib_ignore}
+    ${esp32.lib_ignore}
+    LittleFS_esp32    ; Not needed for Arduino v2
 
 [esp32_4mb_v2]
 extends = esp32, arduino_esp32_v2
