Clean-up ESP32 ini files

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -1,5 +1,10 @@
 ; -- Platform specific build flags
 [esp32]
+extend = env
+board_build.filesystem = littlefs
+; ----- crash reporter
+monitor_filters = esp32_exception_decoder
+
 ; ----- debugger
 check_tool = cppcheck
 check_flags = --enable=all
@@ -67,6 +72,7 @@ build_flags =
     -D STORAGE_SPIFFS_FORCE_DISABLE
     
 lib_ignore =
+    ${env.lib_ignore}
     GxTFT
     XPT2046_Touchscreen
     Adafruit GFX Library
@@ -76,6 +82,7 @@ lib_ignore =
     AXP192
 
 lib_deps =
+    ${env.lib_deps}
     git+https://github.com/fvanroie/ConsoleInput.git#dev
     ; lorol/LittleFS_esp32@^1.0.6    ; for Arduino v1 only
     bxparks/AceButton@^1.9.2         ; GPIO button library
@@ -111,69 +118,73 @@ hspi =
 
 ; -- The Arduino ESP32 v1.0.6 with 3 available flash sizes:
 [arduino_esp32_v1]
+extends = esp32
 framework = arduino
 platform = espressif32@^3.5.0
-board_build.filesystem = littlefs
-; ----- crash reporter
-monitor_filters = esp32_exception_decoder
-extra_scripts =
-    ${esp32.extra_scripts}
-lib_deps = lorol/LittleFS_esp32@^1.0.6   ; Needed for Arduino v1 only
-lib_ignore =
+lib_deps =
+    ${esp32.lib_deps}
+    lorol/LittleFS_esp32@^1.0.6   ; Needed for Arduino v1 only
 
-[esp32_4mb]
-extends = esp32, arduino_esp32_v1
-board_upload.flash_size=4MB
-board_upload.maximum_size = 4194304
-board_build.partitions = user_setups/esp32/partitions_4MB.csv
+; [esp32_4mb]
+; extends = esp32, arduino_esp32_v1
+; board_upload.flash_size=4MB
+; board_upload.maximum_size = 4194304
+; board_build.partitions = user_setups/esp32/partitions_4MB.csv
 
-[esp32_8mb]
-extends = esp32, arduino_esp32_v1
-board_upload.flash_size=8MB
-board_upload.maximum_size = 8388608
-board_build.partitions = user_setups/esp32/partitions_8MB.csv
+; [esp32_8mb]
+; extends = esp32, arduino_esp32_v1
+; board_upload.flash_size=8MB
+; board_upload.maximum_size = 8388608
+; board_build.partitions = user_setups/esp32/partitions_8MB.csv
 
-[esp32_16mb]
-extends = esp32, arduino_esp32_v1
-board_upload.flash_size = 16MB
-board_upload.maximum_size = 16777216
-board_build.partitions = user_setups/esp32/partitions_16MB.csv
+; [esp32_16mb]
+; extends = esp32, arduino_esp32_v1
+; board_upload.flash_size = 16MB
+; board_upload.maximum_size = 16777216
+; board_build.partitions = user_setups/esp32/partitions_16MB.csv
 
 
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32_v2]
+extends = esp32
 framework = arduino
 platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.5/platform-espressif32-v.2.0.5.zip
 ;platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
 ;platform = espressif32
-board_build.filesystem = littlefs
-; ----- crash reporter
-monitor_filters = esp32_exception_decoder
-extra_scripts =
-    ${esp32.extra_scripts}
-lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
 
 lib_ignore =
-    ${env.lib_ignore}
     ${esp32.lib_ignore}
     LittleFS_esp32    ; Not needed for Arduino v2
 
-[esp32_4mb_v2]
-extends = esp32, arduino_esp32_v2
+; [esp32_4mb_v2]
+; extends = esp32, arduino_esp32_v2
+; board_upload.flash_size=4MB
+; board_upload.maximum_size = 4194304
+; board_build.partitions = user_setups/esp32/partitions_4MB.csv
+
+; [esp32_8mb_v2]
+; extends = esp32, arduino_esp32_v2
+; board_upload.flash_size=8MB
+; board_upload.maximum_size = 8388608
+; board_build.partitions = user_setups/esp32/partitions_8MB.csv
+
+; [esp32_16mb_v2]
+; extends = esp32, arduino_esp32_v2
+; board_upload.flash_size = 16MB
+; board_upload.maximum_size = 16777216
+; board_build.partitions = user_setups/esp32/partitions_16MB.csv
+
+[flash_4mb]
 board_upload.flash_size=4MB
 board_upload.maximum_size = 4194304
 board_build.partitions = user_setups/esp32/partitions_4MB.csv
 
-[esp32_8mb_v2]
-extends = esp32, arduino_esp32_v2
+[flash_8mb]
 board_upload.flash_size=8MB
 board_upload.maximum_size = 8388608
 board_build.partitions = user_setups/esp32/partitions_8MB.csv
 
-[esp32_16mb_v2]
-extends = esp32, arduino_esp32_v2
+[flash_16mb]
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 board_build.partitions = user_setups/esp32/partitions_16MB.csv
