--- a/user_setups/esp32/az-touch-mod-esp32_ili9341.ini
+++ b/user_setups/esp32/az-touch-mod-esp32_ili9341.ini
@@ -6,11 +6,11 @@
 ;***************************************************;
 
 [az-touch-mod-esp32_ili9341]
+extends = arduino_esp32_v2
 board = esp32dev
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${arduino_esp32_v2.build_flags}
     ${esp32.ps_ram}
     -D HASP_MODEL="AZ-Touch MOD ESP32 DevKitC"
 
@@ -28,19 +28,12 @@ build_flags =
 
 ;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
-
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
 ;endregion
 
 [env:az-touch-mod-esp32_ili9341_4MB]
-extends = az-touch-mod-esp32_ili9341, esp32_4mb_v2
+extends = az-touch-mod-esp32_ili9341, flash_4mb
 
 [env:az-touch-mod-esp32_ili9341_8MB]
-extends = az-touch-mod-esp32_ili9341, esp32_8mb_v2
+extends = az-touch-mod-esp32_ili9341, flash_8mb
