--- a/user_setups/esp32/d1-mini-esp32_ili9341.ini
+++ b/user_setups/esp32/d1-mini-esp32_ili9341.ini
@@ -6,12 +6,11 @@
 ;***************************************************;
 
 [env:d1-mini-esp32_ili9341]
-extends = esp32_4mb_v2
+extends = arduino_esp32_v2, flash_4mb
 board = wemos_d1_mini32
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${arduino_esp32_v2.build_flags}
     ${esp32.no_ps_ram}
     -D HASP_MODEL="ESP32 D1 Mini"
 
@@ -28,13 +27,6 @@ build_flags =
 
 ;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
-
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
 ;endregion
