--- a/user_setups/esp32/esp32-3248s035.ini
+++ b/user_setups/esp32/esp32-3248s035.ini
@@ -5,11 +5,11 @@
 ;***************************************************;
 
 [esp32-3248s035]
+extends = arduino_esp32_v2
 board = esp32dev
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${arduino_esp32_v2.build_flags}
     ${esp32.no_ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
@@ -32,23 +32,9 @@ build_flags =
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
-;region -- Library options -------------------------------
-lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
-    ${arduino_esp32_v2.lib_deps}
-    ${tft_espi.lib_deps}
-    ;${lovyangfx.lib_deps}
-    
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
-;endregion
-
 
 [env:esp32-3248s035r_4MB]
-extends = esp32-3248s035, esp32_4mb_v2
+extends = esp32-3248s035, flash_4mb
 build_flags =
     ${esp32-3248s035.build_flags}
     -D TOUCH_CS=33
@@ -62,14 +48,18 @@ build_flags =
     -D I2C_TOUCH_FREQUENCY=0
     -D SPI_TOUCH_FREQUENCY=2500000
 
+lib_deps =
+    ${esp32-3248s035.lib_deps}
+    ${tft_espi.lib_deps}
+    ;${lovyangfx.lib_deps}
+    
 
 [env:esp32-3248s035c_4MB]
-extends = esp32_4mb_v2
+extends = esp32-3248s035, flash_4mb
 board = esp32dev
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${esp32-3248s035.build_flags}
     ${esp32.no_ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
@@ -103,17 +93,8 @@ build_flags =
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
-;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
-    ${arduino_esp32_v2.lib_deps}
+    ${esp32-3248s035.lib_deps}
     ;${tft_espi.lib_deps}
     ${lovyangfx.lib_deps}
     ;${goodix.lib_deps}
-    
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
-;endregion
