--- a/user_setups/esp32/freetouchdeck.ini
+++ b/user_setups/esp32/freetouchdeck.ini
@@ -5,11 +5,11 @@
 ;***************************************************;
 
 [freetouchdeck]
+extends = arduino_esp32_v2
 board = esp32dev
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${arduino_esp32_v2.build_flags}
     ${esp32.ps_ram}
     -D HASP_MODEL="FreeTouchDeck"
 
@@ -44,20 +44,13 @@ build_flags =
 
 ;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
-
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
 ;endregion
 
 
 [env:freetouchdeck_4MB]
-extends = merge:freetouchdeck, esp32_4mb_v2
+extends = freetouchdeck, flash_4mb
 
 [env:freetouchdeck_8MB]
-extends = merge:freetouchdeck, esp32_8mb_v2
+extends = freetouchdeck, flash_8mb
