--- a/user_setups/esp32/d1-r32-waveshare_ili9486.ini
+++ b/user_setups/esp32/d1-r32-waveshare_ili9486.ini
@@ -6,12 +6,11 @@
 ;***************************************************;
 
 [env:d1-r32-waveshare_ili9486]
-extends = esp32_4mb_v2
+extends = arduino_esp32_v2, flash_4mb
 board = wemos_d1_mini32
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${arduino_esp32_v2.build_flags}
     ${esp32.no_ps_ram}
     -D HASP_MODEL="ESP32 D1 R32 ILI9486"
 
@@ -36,16 +35,7 @@ build_flags =
     -D TOUCH_CS=17
 ;endregion
 
-;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
     ; ${lovyangfx.lib_deps}
-
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
-;endregion
