--- a/user_setups/esp32/esp32-touchdown.ini
+++ b/user_setups/esp32/esp32-touchdown.ini
@@ -5,12 +5,11 @@
 ;***************************************************;
 
 [env:esp32-touchdown]
-extends = esp32_4mb_v2
+extends = arduino_esp32_v2, flash_4mb
 board = esp32dev
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${arduino_esp32_v2.build_flags}
     ${esp32.no_ps_ram}
     -D HASP_MODEL="ESP32 Touchdown"
 
@@ -40,16 +39,7 @@ build_flags =
 ; -- Debugging options -----------------------------
 ;   -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_DEBUG
 
-;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
     ${ft6336.lib_deps}
-
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
-;endregion
