--- a/user_setups/esp32/huzzah32-featherwing-35.ini
+++ b/user_setups/esp32/huzzah32-featherwing-35.ini
@@ -6,12 +6,11 @@
 ;***************************************************;
 
 [env:huzzah32-featherwing-35]
-extends = esp32_4mb_v2
+extends = arduino_esp32_v2, flash_4mb
 board = featheresp32
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${arduino_esp32_v2.build_flags}
     ${esp32.no_ps_ram}
     -D HASP_MODEL="Adafruit Featherwing 3.5"
 
@@ -29,13 +28,6 @@ build_flags =
 ;endregion
 
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
     ${stmpe610.lib_deps}
-
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
