Clean-up ESP32 ini files

--- a/user_setups/esp32/lolin-d32-pro_ili9341.ini
+++ b/user_setups/esp32/lolin-d32-pro_ili9341.ini
@@ -8,12 +8,11 @@
 ; !! This board already defines TFT_CS, TFT_DC and TFT_RST !!
 
 [env:lolin-d32-pro_ili9341]
-extends = esp32_16mb_v2
+extends = arduino_esp32_v2, flash_16mb
 board = lolin_d32_pro
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${arduino_esp32_v2.build_flags}
     ${esp32.ps_ram}
     -D HASP_MODEL="Lolin D32 Pro"
 
@@ -29,15 +28,7 @@ build_flags =
     -D TOUCH_CS=12  ; Default for TFT connector
 ;endregion
     
-;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
 
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
-;endregion
