--- a/user_setups/esp32/wt32-sc01.ini
+++ b/user_setups/esp32/wt32-sc01.ini
@@ -6,11 +6,12 @@
 ;***************************************************;
 
 [wt32-sc01]
+extends = arduino_esp32_v2
 board = esp32dev
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    -D HASP_MODEL="WT32-SC01"
+    ${arduino_esp32_v2.build_flags}
     ${esp32.ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
@@ -37,23 +38,14 @@ build_flags =
     -D I2C_TOUCH_ADDRESS=0x38
 ;endregion
 
-;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
     ;${lovyangfx.lib_deps}
     ${ft6336.lib_deps}
 
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
-;endregion
-
 [env:wt32-sc01_4MB]
-extends = wt32-sc01, esp32_4mb_v2
+extends = wt32-sc01, flash_8mb
 
 [env:wt32-sc01_16MB]
-extends = wt32-sc01, esp32_16mb_v2
+extends = wt32-sc01, flash_16mb
