--- a/user_setups/esp32/m5stack_core2.ini
+++ b/user_setups/esp32/m5stack_core2.ini
@@ -6,12 +6,11 @@
 ;***************************************************;
 
 [env:m5stack-core2]
-extends = esp32_16mb_v2
+extends = arduino_esp32_v2, flash_16mb
 board = esp32dev
 
 build_flags =
-    ${env.build_flags}
-    ${esp32.build_flags}
+    ${arduino_esp32_v2.build_flags}
     ${esp32.ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
@@ -32,17 +31,8 @@ build_flags =
     -D I2C_TOUCH_ADDRESS=0x38
 ;endregion
 
-;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32.lib_deps}
     ${arduino_esp32_v2.lib_deps}
     ${tft_espi.lib_deps}
     ${ft6336.lib_deps}
     https://github.com/fvanroie/M5Core2.git#AXP192
-
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32.lib_ignore}
-    ${arduino_esp32_v2.lib_ignore}
-;endregion
