Clean-up ESP32 ini files

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ extra_configs =
     ; --  Base configurations per platform
     user_setups/esp32/_esp32.ini
     user_setups/esp32s2/_esp32s2.ini
+    user_setups/esp32s3/_esp32s3.ini
     ; --  Put active [env] files in this dir to be included in the build menu
     user_setups/active/*.ini
     ; --  Add customizations to this file only:
