--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -2,6 +2,9 @@
 [esp32]
 extend = env
 board_build.filesystem = littlefs
+board_build.f_cpu = 240000000L
+board_build.mcu = esp32
+
 ; ----- crash reporter
 monitor_filters = esp32_exception_decoder
 
@@ -10,6 +13,7 @@ check_tool = cppcheck
 check_flags = --enable=all
 debug_tool = esp-prog
 debug_init_break = tbreak setup
+
 board_build.embed_files =
     data/edit.htm.gz
     data/openhasp.ttf
@@ -125,24 +129,6 @@ lib_deps =
     ${esp32.lib_deps}
     lorol/LittleFS_esp32@^1.0.6   ; Needed for Arduino v1 only
 
-; [esp32_4mb]
-; extends = esp32, arduino_esp32_v1
-; board_upload.flash_size=4MB
-; board_upload.maximum_size = 4194304
-; board_build.partitions = user_setups/esp32/partitions_4MB.csv
-
-; [esp32_8mb]
-; extends = esp32, arduino_esp32_v1
-; board_upload.flash_size=8MB
-; board_upload.maximum_size = 8388608
-; board_build.partitions = user_setups/esp32/partitions_8MB.csv
-
-; [esp32_16mb]
-; extends = esp32, arduino_esp32_v1
-; board_upload.flash_size = 16MB
-; board_upload.maximum_size = 16777216
-; board_build.partitions = user_setups/esp32/partitions_16MB.csv
-
 
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32_v2]
@@ -156,23 +142,6 @@ lib_ignore =
     ${esp32.lib_ignore}
     LittleFS_esp32    ; Not needed for Arduino v2
 
-; [esp32_4mb_v2]
-; extends = esp32, arduino_esp32_v2
-; board_upload.flash_size=4MB
-; board_upload.maximum_size = 4194304
-; board_build.partitions = user_setups/esp32/partitions_4MB.csv
-
-; [esp32_8mb_v2]
-; extends = esp32, arduino_esp32_v2
-; board_upload.flash_size=8MB
-; board_upload.maximum_size = 8388608
-; board_build.partitions = user_setups/esp32/partitions_8MB.csv
-
-; [esp32_16mb_v2]
-; extends = esp32, arduino_esp32_v2
-; board_upload.flash_size = 16MB
-; board_upload.maximum_size = 16777216
-; board_build.partitions = user_setups/esp32/partitions_16MB.csv
 
 [flash_4mb]
 board_upload.flash_size=4MB
