--- a/user_setups/esp32/m5stack_core2.ini
+++ b/user_setups/esp32/m5stack_core2.ini
@@ -10,6 +10,7 @@ extends = arduino_esp32_v2, flash_16mb
 board = esp32dev
 
 build_flags =
+    -D HASP_MODEL="M5Stack Core2"
     ${arduino_esp32_v2.build_flags}
     ${esp32.ps_ram}
 
