--- a/user_setups/esp32s3/makerfabs-s3-tft35-spi.ini
+++ b/user_setups/esp32s3/makerfabs-s3-tft35-spi.ini
@@ -5,14 +5,13 @@
 ;***************************************************;
 
 [env:makerfabs-s3-tft35-spi]
-extends = esp32s3_16mb_v2
+extends = arduino_esp32s3_v2
 board = esp32s3
 
 build_flags =
-    ${env.build_flags}
-    ${esp32s3.build_flags}
-    ${esp32s3.ps_ram}
     -D HASP_MODEL="Makerfabs S3 SPI TFT With Touch 3.5 ILI9488"
+    ${arduino_esp32s3_v2.build_flags}
+    ${esp32s3.ps_ram}
 
 ;region -- TFT_eSPI build options ------------------------
     -D LGFX_USE_V1=1
@@ -44,15 +43,6 @@ build_flags =
     -D SD_CS=1
 ;endregion
 
-;region -- Library options -------------------------------
 lib_deps =
-    ${env.lib_deps}
-    ${esp32s3.lib_deps}
     ${arduino_esp32s3_v2.lib_deps}
     ${lovyangfx.lib_deps}
-
-lib_ignore =
-    ${env.lib_ignore}
-    ${esp32s3.lib_ignore}
-    ${arduino_esp32s3_v2.lib_ignore}
-;endregion
