Clean-up ESP32 ini files

--- a/user_setups/esp32s3/_esp32s3.ini
+++ b/user_setups/esp32s3/_esp32s3.ini
@@ -2,6 +2,17 @@
 [esp32s3]
 extend = esp32
 board_build.mcu = esp32s3
+build_flags = ${esp32.build_flags}
+lib_deps = ${esp32.lib_deps}
+lib_ignore = ${esp32.lib_ignore}
+
+ps_ram =
+    -DBOARD_HAS_PSRAM
+    -D HASP_USE_FREETYPE=1
+    -D LV_USE_FREETYPE=1
+no_ps_ram =
+    -D HASP_USE_FREETYPE=1
+    -D LV_USE_FREETYPE=1
 
 ; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32s3_v2]
@@ -10,3 +21,7 @@ framework = arduino
 platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
 ;platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
 ;platform = espressif32
+
+build_flags = ${esp32s3.build_flags}
+lib_deps = ${esp32s3.lib_deps}
+lib_ignore = ${esp32s3.lib_ignore}
