Clean-up ESP32-S3 ini files

--- a/user_setups/esp32s3/_esp32s3.ini
+++ b/user_setups/esp32s3/_esp32s3.ini
@@ -1,10 +1,7 @@
 ; -- Platform specific build flags
 [esp32s3]
-extend = esp32
+extends = esp32
 board_build.mcu = esp32s3
-build_flags = ${esp32.build_flags}
-lib_deps = ${esp32.lib_deps}
-lib_ignore = ${esp32.lib_ignore}
 
 ps_ram =
     -DBOARD_HAS_PSRAM
@@ -22,6 +19,3 @@ platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.
 ;platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
 ;platform = espressif32
 
-build_flags = ${esp32s3.build_flags}
-lib_deps = ${esp32s3.lib_deps}
-lib_ignore = ${esp32s3.lib_ignore}
