Clean-up ESP32-S3 ini files

--- a/user_setups/esp32s3/makerfabs-s3-tft35-spi.ini
+++ b/user_setups/esp32s3/makerfabs-s3-tft35-spi.ini
@@ -5,7 +5,7 @@
 ;***************************************************;
 
 [env:makerfabs-s3-tft35-spi]
-extends = arduino_esp32s3_v2
+extends = arduino_esp32s3_v2, flash_16mb
 board = esp32s3
 
 build_flags =
