Update static files

--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -15,11 +15,11 @@ debug_tool = esp-prog
 debug_init_break = tbreak setup
 
 board_build.embed_files =
-    data/edit.htm.gz
+    data/static/edit.htm.gz
     data/openhasp.ttf
     ; data/openhasplite.ttf
-    data/style.css.gz
-    data/script.js.gz
+    data/static/style.css.gz
+    data/static/script.js.gz
     data/cert/x509_crt_bundle.bin
     ; -- new dynamic website files -------------------
     data/static/logo.svg.gz
@@ -70,8 +70,8 @@ build_flags =
 ; -- SimpleFTpServer build options -----------------
     -D HASP_USE_FTP=1
     -D FTP_SERVER_DEBUG
-    -D FTP_SERVER_NETWORK_TYPE=4 ;// NETWORK_ESP32
-    -D STORAGE_TYPE=6 ;//  STORAGE_LITTLEFS
+    -D FTP_SERVER_NETWORK_TYPE=NETWORK_ESP32 ;// NETWORK_ESP32
+    -D STORAGE_TYPE=STORAGE_LITTLEFS ;//  STORAGE_LITTLEFS
     -D STORAGE_SD_FORCE_DISABLE
     -D STORAGE_SPIFFS_FORCE_DISABLE
     
