--- a/platformio.ini
+++ b/platformio.ini
@@ -66,8 +66,8 @@ build_flags =
     ; -- ESP build options ------------------------------------
     -D SPIFFS_TEMPORAL_FD_CACHE     ; speedup opening recent files
     ; -- ArduinoJson build options ----------------------------
-    -D ARDUINOJSON_DECODE_UNICODE=1 ; for utf-8 symbols
-    
+    -D ARDUINOJSON_DECODE_UNICODE=1  ; for utf-8 symbols
+    -D ARDUINOJSON_ENABLE_COMMENTS=1 ; enable comments
     ; -- StreamUtils build options ----------------------------
     -D STREAMUTILS_ENABLE_EEPROM=1  ; for STM32, it also supports EEPROM
 
