Update ESP32-S2 Environment

--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -1,31 +1,17 @@
 ; -- Platform specific build flags
 [esp32s2]
+extends = esp32
 board_build.mcu = esp32s2
-board_build.f_cpu = 240000000L
-board_upload.flash_size=4MB
-board_upload.maximum_size = 4194304
-board_build.partitions = user_setups/esp32s2/no_ota.csv
-board_build.filesystem = littlefs
-
-; ----- crash reporter
-monitor_filters = esp32_exception_decoder
-
-; ----- debugger
-; check_tool = cppcheck
-; check_flags = --enable=all
-; debug_tool = esp-prog
-; debug_init_break = tbreak setup
 
 build_flags =
     ${env.build_flags}
-    -D ESP32S2
-    -D HTTP_UPLOAD_BUFLEN=512       ; lower http upload buffer
+    -D HTTP_UPLOAD_BUFLEN=512      ; lower http upload buffer
     -D MQTT_MAX_PACKET_SIZE=2048    ; longer PubSubClient messages
     -D HASP_CONSOLE_BUFFER=256      ; maximum length of a console/telnet command
     -D NO_GLOBAL_HTTPUPDATE         ; dont instantiate httpUpdate
     ;-D CONFIG_NEWLIB_NANO_FORMAT
 ; -- lvgl build options -----------------------------
-    -D LV_ATTRIBUTE_FAST_MEM=       ; smaller RAM doesn't allow for IRAM_ATTR
+    -D LV_ATTRIBUTE_FAST_MEM=
     -D LV_ATTRIBUTE_TASK_HANDLER=IRAM_ATTR
     -D LV_USE_FS_IF=1
     ;-D LV_FS_PC_PATH="//littlefs"   ; this needs to match the vfs mount pount
@@ -51,42 +37,28 @@ build_flags =
     -D LV_FREETYPE_SBIT_CACHE=1             ; use small bitmap cache
     -D LV_FREETYPE_CACHE_SIZE=1             ; cache freetype font sizes
     -D LV_USE_FT_CACHE_MANAGER=1            ; crashes without cache
-    -D LVGL_FREETYPE_MAX_FACES=8            ; max number of FreeType faces in cache
-    -D LVGL_FREETYPE_MAX_SIZES=8            ; max number of sizes in cache
-    -D LVGL_FREETYPE_MAX_BYTES=16384        ; max bytes in cache
-    -D LVGL_FREETYPE_MAX_BYTES_PSRAM=131072 ; max bytes in cache when using PSRAM
-
-lib_ignore =
-    GxTFT
-    ETHSPI
-    XPT2046_Touchscreen
-    Adafruit GFX Library
-    lv_drv_fsmc_ili9341
-    lv_drivers
-    AXP192
-
-lib_deps =
-    ${tft_espi.lib_deps}
-    ;ESP Async WebServer
-    git+https://github.com/fvanroie/ConsoleInput.git#dev
-    bxparks/AceButton@^1.9.2         ; GPIO button library
-    bblanchon/StreamUtils@^1.6.3     ; for EEPromStream and BufferedTelnetClient
-    ; knolleary/PubSubClient@^2.8.0    ; MQTT client
+    -D LVGL_FREETYPE_MAX_FACES=8           ; max number of FreeType faces in cache
+    -D LVGL_FREETYPE_MAX_SIZES=8           ; max number of sizes in cache
+    -D LVGL_FREETYPE_MAX_BYTES=2048         ; max bytes in bitcache per font
+    -D LVGL_FREETYPE_MAX_BYTES_PSRAM=65536  ; max bytes in bitcache per font when using PSRAM
+; -- SimpleFTpServer build options -----------------
+    -D HASP_USE_FTP=1
+    -D FTP_SERVER_DEBUG
+    -D FTP_SERVER_NETWORK_TYPE=NETWORK_ESP32 ;// NETWORK_ESP32
+    -D STORAGE_TYPE=STORAGE_LITTLEFS ;//  STORAGE_LITTLEFS
+    -D STORAGE_SD_FORCE_DISABLE
+    -D STORAGE_SPIFFS_FORCE_DISABLE
+    
 
 ps_ram =
     -DBOARD_HAS_PSRAM
     -D HASP_USE_FREETYPE=1
     -D LV_USE_FREETYPE=1
 no_ps_ram =
-    -D HASP_USE_FREETYPE=0
-    -D LV_USE_FREETYPE=0
+    -D HASP_USE_FREETYPE=1
+    -D LV_USE_FREETYPE=1
 
-extra_scripts =
-    tools/littlefsbuilder.py
-    tools/esp_merge_bin.py
-    tools/analyze_elf.py
-;    ${env.extra_scripts}
-;    tools/copy_partitions.py
+
 
 ; -- The ESP32S2 has 2 SPI Hardware Busses available to use:
 hspi =
@@ -98,34 +70,13 @@ fspi =
     -D TFT_MOSI=13
     -D TFT_SCLK=14
 
-; -- The Arduino ESP32S2 v2.0.2 with 3 available flash sizes:
+; -- The Arduino ESP32 v2.0.2 with 3 available flash sizes:
 [arduino_esp32s2_v2]
+extends = esp32s2
 framework = arduino
 platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
-board_build.embed_files = ${esp32.board_build.embed_files}
-board_build.filesystem = littlefs
-; ----- crash reporter
-monitor_filters = esp32_exception_decoder
-extra_scripts =
-    ${esp32s2.extra_scripts}
-
-[esp32s2_4mb_v2]
-extends = esp32s2, arduino_esp32s2_v2
-board_upload.flash_size=4MB
-board_upload.maximum_size = 4194304
-board_build.partitions = user_setups/esp32/partitions_4MB.csv
-
-[esp32s2_8mb_v2]
-extends = esp32s2, arduino_esp32s2_v2
-board_upload.flash_size=8MB
-board_upload.maximum_size = 8388608
-board_build.partitions = user_setups/esp32/partitions_8MB.csv
-
-[esp32s2_16mb_v2]
-extends = esp32s2, arduino_esp32s2_v2
-board_upload.flash_size = 16MB
-board_upload.maximum_size = 16777216
-board_build.partitions = user_setups/esp32/partitions_16MB.csv
+;platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
+;platform = espressif32
 
 ; =========================== SOLO ==============================================
 
@@ -139,21 +90,3 @@ board_build.filesystem = littlefs
 monitor_filters = esp32_exception_decoder
 extra_scripts =
     ${esp32s2.extra_scripts}
-
-[esp32s2-solo_4mb_v2]
-extends = esp32s2, arduino_esp32s2-solo_v2
-board_upload.flash_size=4MB
-board_upload.maximum_size = 4194304
-board_build.partitions = user_setups/esp32/partitions_4MB.csv
-
-[esp32s2-solo_8mb_v2]
-extends = esp32s2, arduino_esp32s2-solo_v2
-board_upload.flash_size=8MB
-board_upload.maximum_size = 8388608
-board_build.partitions = user_setups/esp32/partitions_8MB.csv
-
-[esp32s2-solo_16mb_v2]
-extends = esp32s2, arduino_esp32s2-solo_v2
-board_upload.flash_size = 16MB
-board_upload.maximum_size = 16777216
-board_build.partitions = user_setups/esp32/partitions_16MB.csv
