--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -110,6 +110,7 @@ build_flags =
     -D TOUCH_SDA=19
     -D TOUCH_IRQ=-1
     -D TOUCH_RST=38
+    -D I2C_TOUCH_ADDRESS=0x14 ; or 0x5D
     -D I2C_TOUCH_FREQUENCY=400000
 lib_deps =
     ${sunton-esp32-s3-tft.lib_deps}
@@ -146,6 +147,7 @@ build_flags =
     -D TOUCH_SDA=19
     -D TOUCH_IRQ=-1
     -D TOUCH_RST=38
+    -D I2C_TOUCH_ADDRESS=0x14 ; or 0x5D
     -D I2C_TOUCH_FREQUENCY=400000
 lib_deps =
     ${sunton-esp32-s3-tft.lib_deps}
@@ -182,6 +184,7 @@ build_flags =
     -D TOUCH_SDA=19
     -D TOUCH_IRQ=-1
     -D TOUCH_RST=38
+    -D I2C_TOUCH_ADDRESS=0x14 ; or 0x5D
     -D I2C_TOUCH_FREQUENCY=400000
 lib_deps =
     ${sunton-esp32-s3-tft.lib_deps}
@@ -238,6 +241,7 @@ build_flags =
     -D TOUCH_SDA=19
     -D TOUCH_IRQ=-1
     -D TOUCH_RST=38
+    -D I2C_TOUCH_ADDRESS=0x5d ; or 0x14
     -D I2C_TOUCH_FREQUENCY=400000
 lib_deps =
     ${sunton-esp32-s3-tft.lib_deps}
