--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -134,8 +134,8 @@ lib_deps =
 [arduino_esp32_v2]
 extends = esp32
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.5/platform-espressif32-v.2.0.5.zip
-;platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
+;platform = https://github.com/tasmota/platform-espressif32/releases/download/v.2.0.5/platform-espressif32-v.2.0.5.zip
+platform = https://github.com/Jason2866/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
 ;platform = espressif32
 
 lib_ignore =
