--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -74,8 +74,8 @@ fspi =
 [arduino_esp32s2_v2]
 extends = esp32s2
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
-;platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
+;platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
+platform = https://github.com/Jason2866/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
 ;platform = espressif32
 
 ; =========================== SOLO ==============================================
