--- a/user_setups/esp32s3/_esp32s3.ini
+++ b/user_setups/esp32s3/_esp32s3.ini
@@ -15,7 +15,7 @@ no_ps_ram =
 [arduino_esp32s3_v2]
 extends = esp32s3
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
-;platform = https://github.com/tasmota/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
+;platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-2.0.4.1.zip
+platform = https://github.com/Jason2866/platform-espressif32/releases/download/2022.12.2/platform-espressif32.zip
 ;platform = espressif32
 
