--- a/user_setups/esp32s2/_esp32s2.ini
+++ b/user_setups/esp32s2/_esp32s2.ini
@@ -82,7 +82,7 @@ platform = https://github.com/tasmota/platform-espressif32/releases/download/202
 ; -- The Arduino ESP32S2-solo v2.0.2 with 3 available flash sizes:
 [arduino_esp32s2-solo_v2]
 framework = arduino
-platform = https://github.com/tasmota/platform-espressif32/releases/download/v2.0.4.1/platform-espressif32-solo1-2.0.4.1.zip
+platform = https://github.com/tasmota/platform-espressif32/releases/download/2023.01.01/platform-espressif32.zip
 board_build.embed_files = ${esp32.board_build.embed_files}
 board_build.filesystem = littlefs
 ; ----- crash reporter
