--- a/user_setups/esp32s3/wt32-sc01-plus.ini
+++ b/user_setups/esp32s3/wt32-sc01-plus.ini
@@ -7,7 +7,8 @@
 
 [wt32-sc01-plus]
 extends = arduino_esp32s3_v2
-board = esp32s3
+board = esp32-s3-devkitc-1
+board_build.arduino.memory_type = qio_opi
 
 build_flags =
     -D HASP_MODEL="SC01 Plus"
