Update config files

--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -7,7 +7,8 @@
 
 [sunton-esp32-s3-tft]
 extends = arduino_esp32s3_v2
-board = esp32s3_qio_opi
+board = esp32-s3-devkitc-1
+board_build.arduino.memory_type = qio_opi
 
 build_flags =
     ${arduino_esp32s3_v2.build_flags}
@@ -140,8 +141,8 @@ build_flags =
     -D TFT_PREFER_SPEED=14000000
     -D TFT_AUTO_FLUSH=1
     ; Touch Setttings
-    -D TOUCH_WIDTH=480
-    -D TOUCH_HEIGHT=272
+    ;-D TOUCH_WIDTH=480
+    ;-D TOUCH_HEIGHT=272
     -D TOUCH_DRIVER=0x911
     -D TOUCH_SCL=20
     -D TOUCH_SDA=19
@@ -179,7 +180,7 @@ build_flags =
     ; Touch Setttings
     -D TOUCH_WIDTH=800
     -D TOUCH_HEIGHT=480
-    -D TOUCH_DRIVER=0x911
+    -D TOUCH_DRIVER=0x0911
     -D TOUCH_SCL=20
     -D TOUCH_SDA=19
     -D TOUCH_IRQ=-1
