--- a/user_setups/esp32s3/ttgo-t-display-s3.ini
+++ b/user_setups/esp32s3/ttgo-t-display-s3.ini
@@ -16,7 +16,8 @@ build_flags =
     ${esp32s3.ps_ram}
     -D HASP_MODEL="TTGO T-Display S3"
     -D ARDUINO_USB_MODE=1 
-    -D ARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_USB_CDC_ON_BOOT
+	-DUSE_USB_CDC_CONSOLE
 
 ;region -- TFT_eSPI build options ------------------------
     -D USER_SETUP_LOADED=1
