--- a/user_setups/esp32s3/gs-t3e.ini
+++ b/user_setups/esp32s3/gs-t3e.ini
@@ -7,8 +7,8 @@
 
 [odm-t3e]
 extends = arduino_esp32s3_v2
-;board = esp32-s3-devkitc-1
-board = esp32s3_qio_opi
+board = esp32-s3-devkitc-1
+board_build.arduino.memory_type = qio_opi
 
 build_flags =
     -D HASP_MODEL="GS-T3E"
