--- a/user_setups/esp32s3/zw3d95ce01s_ar.ini
+++ b/user_setups/esp32s3/zw3d95ce01s_ar.ini
@@ -7,8 +7,8 @@
 
 [panlee-zw3d95ce01s]
 extends = arduino_esp32s3_v2
-;board = esp32-s3-devkitc-1
-board = esp32s3_qio_opi
+board = esp32-s3-devkitc-1
+board_build.arduino.memory_type = qio_opi
 
 build_flags =
     ${arduino_esp32s3_v2.build_flags}
