WT32 SC01 Plus configuration fix

--- a/user_setups/esp32s3/wt32-sc01-plus.ini
+++ b/user_setups/esp32s3/wt32-sc01-plus.ini
@@ -1,5 +1,5 @@
 ;***************************************************;
-;         WT SC01 Plus with TFT 3.5"                ;
+;         WT32 SC01 Plus with TFT 3.5"              ;
 ;               - Custom esp32-s3 board             ;
 ;               - st7796 TFT                        ;
 ;               - ft6336 touch controller           ;
@@ -7,8 +7,8 @@
 
 [wt32-sc01-plus]
 extends = arduino_esp32s3_v2
-board = esp32-s3-devkitc-1
-board_build.arduino.memory_type = qio_opi
+board = esp32s3_qio_qspi
+board_build.arduino.memory_type = qio_qspi 
 
 build_flags =
     -D HASP_MODEL="SC01 Plus"
