Fix touch resolution for Sunton 8048S043C

--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -141,8 +141,8 @@ build_flags =
     -D TFT_PREFER_SPEED=14000000
     -D TFT_AUTO_FLUSH=1
     ; Touch Setttings
-    ;-D TOUCH_WIDTH=480
-    ;-D TOUCH_HEIGHT=272
+    -D TOUCH_WIDTH=480
+    -D TOUCH_HEIGHT=272
     -D TOUCH_DRIVER=0x911
     -D TOUCH_SCL=20
     -D TOUCH_SDA=19
