Probe for GT911 address if TOUCH_IRQ not set

--- a/user_setups/esp32s3/gs-t3e.ini
+++ b/user_setups/esp32s3/gs-t3e.ini
@@ -46,6 +46,7 @@ build_flags =
     -D TOUCH_SDA=40
     -D TOUCH_SCL=41
     -D TOUCH_RST=-1
+    -D TOUCH_IRQ=-1
     -D TFT_AUTO_FLUSH=1
     -D TFT_HSYNC_POLARITY=1
     -D TFT_HSYNC_FRONT_PORCH=10
