--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -16,10 +16,9 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     -D LANBONL8
-    ; -D USER_SETUP_LOADED=1
+    -D LANBONL8_HS             ; default GPIO settings
     -D LGFX_USE_V1=1
     -D ST7789_DRIVER=1
-    ;-D CGRAM_OFFSET=1         ; Library will add offsets required
     -D TFT_SDA_READ            ; Read from display, it only provides an SDA pin
     -D TFT_WIDTH=240
     -D TFT_HEIGHT=320
@@ -48,15 +47,13 @@ build_flags =
     -D LED_GREEN=32
     -D LED_BLUE=33
     -D RELAY_1=12
-    -D RELAY_2=24
-    -D RELAY_3=37
+    -D RELAY_2=14
+    -D RELAY_3=27
 ;endregion
 
 lib_deps =
     ${arduino_esp32_v2.lib_deps}
     ${lovyangfx.lib_deps}
-    ;${tft_espi.lib_deps}
     ; FT6336U is 6x faster then FocalTech Library
     ;git+https://github.com/lewisxhe/FocalTech_Library.git
     ${ft6336.lib_deps}
-
