--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -15,6 +15,9 @@ debug_tool = esp-prog
 debug_init_break = tbreak setup
 
 board_build.embed_files =
+    ${esp32.files}
+
+files =
     data/static/edit.htm.gz
     data/openhasp.ttf
     ; data/openhasplite.ttf
@@ -28,6 +31,7 @@ board_build.embed_files =
     data/static/main.js.gz
     data/static/en.json.gz
     ; data/static/hasp.htm.gz
+    data/pages/pages.jsonl
     
 build_flags =
     ${env.build_flags}
