--- a/user_setups/esp32/lanbon_l8.ini
+++ b/user_setups/esp32/lanbon_l8.ini
@@ -16,7 +16,8 @@ build_flags =
 
 ;region -- TFT_eSPI build options ------------------------
     -D LANBONL8
-    -D LANBONL8_HS             ; default GPIO settings
+    -D LANBON_L8HS             ; default GPIO settings and pages.jsonl
+    -D PAGES_JSONL="_binary_data_pages_lanbon_l8_hs_jsonl"
     -D LGFX_USE_V1=1
     -D ST7789_DRIVER=1
     -D TFT_SDA_READ            ; Read from display, it only provides an SDA pin
@@ -37,6 +38,8 @@ build_flags =
     -D TFT_MISO=25       ; FCP pin7 SDO
     -D TFT_BCKL=5
     -D TOUCH_DRIVER=0x6336 ; FT5206 is too slow, 6336U works 6x faster
+    -D HASP_USE_LGFX_TOUCH=1
+    -D TOUCH_OFFSET_ROTATION=2
     -D TOUCH_SDA=4
     -D TOUCH_SCL=0
     -D TOUCH_IRQ=-1   ; not connected
@@ -51,9 +54,13 @@ build_flags =
     -D RELAY_3=27
 ;endregion
 
+board_build.embed_files =
+    ${esp32.files}
+    data/pages/lanbon_l8-hs.jsonl
+
 lib_deps =
     ${arduino_esp32_v2.lib_deps}
     ${lovyangfx.lib_deps}
     ; FT6336U is 6x faster then FocalTech Library
     ;git+https://github.com/lewisxhe/FocalTech_Library.git
-    ${ft6336.lib_deps}
+    ;${ft6336.lib_deps}
