Update to 0.7.0-rc1

--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -17,7 +17,7 @@ build_flags =
     ;-DARDUINO_USB_CDC_ON_BOOT
 	;-DUSE_USB_CDC_CONSOLE
 
-;region -- LovyanGFX build options ------------------------
+;region -- ArduinoGFX build options ------------------------
     -D HASP_USE_ARDUINOGFX=1
     -D HASP_LV_USE_SW_ROTATE=1
     -D TFT_BCKL=2
