--- a/user_setups/esp32s3/gs-t3e.ini
+++ b/user_setups/esp32s3/gs-t3e.ini
@@ -17,7 +17,7 @@ build_flags =
     ;-DARDUINO_USB_CDC_ON_BOOT
 	;-DUSE_USB_CDC_CONSOLE
 
-;region -- LovyanGFX build options ------------------------
+;region -- ArduinoGFX build options ------------------------
     -D HASP_USE_ARDUINOGFX=1
     -D ST7701_DRIVER=1
     -D TOUCH_DRIVER=0x911
