--- a/user_setups/esp32s3/zw3d95ce01s_ar.ini
+++ b/user_setups/esp32s3/zw3d95ce01s_ar.ini
@@ -16,7 +16,7 @@ build_flags =
     ;-DARDUINO_USB_CDC_ON_BOOT
 	;-DUSE_USB_CDC_CONSOLE
 
-;region -- LovyanGFX build options ------------------------
+;region -- ArduinoGFX build options ------------------------
     -D HASP_USE_ARDUINOGFX=1
     -D GC9503V_DRIVER=1
     -D TOUCH_DRIVER=0x6336
