--- a/user_setups/esp32s3/sunton-esp32-s3-tft.ini
+++ b/user_setups/esp32s3/sunton-esp32-s3-tft.ini
@@ -65,15 +65,15 @@ build_flags =
     -D TFT_HEIGHT=272
     ; Panel Settings
     -D TFT_HSYNC_POLARITY=0
-    -D TFT_HSYNC_FRONT_PORCH=8
-    -D TFT_HSYNC_PULSE_WIDTH=4
-    -D TFT_HSYNC_BACK_PORCH=43
+    -D TFT_HSYNC_FRONT_PORCH=64   ; Maximum HSYNC Front Porch
+    -D TFT_HSYNC_PULSE_WIDTH=4    ; Typical HSYNC Pulse Width
+    -D TFT_HSYNC_BACK_PORCH=43    ; Typical HSYNC Back Porch
     -D TFT_VSYNC_POLARITY=0
-    -D TFT_VSYNC_FRONT_PORCH=8
-    -D TFT_VSYNC_PULSE_WIDTH=4
-    -D TFT_VSYNC_BACK_PORCH=12
+    -D TFT_VSYNC_FRONT_PORCH=64   ; Maximum VSYNC Front Porch
+    -D TFT_VSYNC_PULSE_WIDTH=4    ; Typical VSYNC Pulse Width
+    -D TFT_VSYNC_BACK_PORCH=12    ; Typical VSYNC Back Porch
     -D TFT_PCLK_ACTIVE_NEG=1
-    -D TFT_PREFER_SPEED=9000000
+    -D TFT_PREFER_SPEED=9000000   ; Typical DCLK Frequency
     -D TFT_AUTO_FLUSH=1
     ; Touch Setttings
     ;-D TOUCH_DRIVER=0x2046
@@ -95,15 +95,15 @@ build_flags =
     -D TFT_HEIGHT=272
     ; Panel Settings
     -D TFT_HSYNC_POLARITY=0
-    -D TFT_HSYNC_FRONT_PORCH=8
-    -D TFT_HSYNC_PULSE_WIDTH=4
-    -D TFT_HSYNC_BACK_PORCH=43
+    -D TFT_HSYNC_FRONT_PORCH=64   ; Maximum HSYNC Front Porch
+    -D TFT_HSYNC_PULSE_WIDTH=4    ; Typical HSYNC Pulse Width
+    -D TFT_HSYNC_BACK_PORCH=43    ; Typical HSYNC Back Porch
     -D TFT_VSYNC_POLARITY=0
-    -D TFT_VSYNC_FRONT_PORCH=8
-    -D TFT_VSYNC_PULSE_WIDTH=4
-    -D TFT_VSYNC_BACK_PORCH=12
+    -D TFT_VSYNC_FRONT_PORCH=64   ; Maximum VSYNC Front Porch
+    -D TFT_VSYNC_PULSE_WIDTH=4    ; Typical VSYNC Pulse Width
+    -D TFT_VSYNC_BACK_PORCH=12    ; Typical VSYNC Back Porch
     -D TFT_PCLK_ACTIVE_NEG=1
-    -D TFT_PREFER_SPEED=9000000
+    -D TFT_PREFER_SPEED=9000000   ; Typical DCLK Frequency
     -D TFT_AUTO_FLUSH=1
     ; Touch Setttings
     -D TOUCH_DRIVER=0x911
@@ -167,15 +167,15 @@ build_flags =
     -D TFT_HEIGHT=480
     ; Panel Setttings
     -D TFT_HSYNC_POLARITY=0
-    -D TFT_HSYNC_FRONT_PORCH=8
-    -D TFT_HSYNC_PULSE_WIDTH=4
-    -D TFT_HSYNC_BACK_PORCH=8
+    -D TFT_HSYNC_FRONT_PORCH=48   ; Maximum HSYNC Front Porch
+    -D TFT_HSYNC_PULSE_WIDTH=4    ; Typical HSYNC Pulse Width
+    -D TFT_HSYNC_BACK_PORCH=8     ; Typical HSYNC Back Porch
     -D TFT_VSYNC_POLARITY=0
-    -D TFT_VSYNC_FRONT_PORCH=8
-    -D TFT_VSYNC_PULSE_WIDTH=4
-    -D TFT_VSYNC_BACK_PORCH=8
+    -D TFT_VSYNC_FRONT_PORCH=12   ; Maximum VSYNC Front Porch
+    -D TFT_VSYNC_PULSE_WIDTH=4    ; Typical VSYNC Pulse Width
+    -D TFT_VSYNC_BACK_PORCH=8     ; Typical VSYNC Back Porch
     -D TFT_PCLK_ACTIVE_NEG=1
-    -D TFT_PREFER_SPEED=12000000
+    -D TFT_PREFER_SPEED=14000000  ; 1/2 of Typical DCLK Frequency
     -D TFT_AUTO_FLUSH=1
     ; Touch Setttings
     -D TOUCH_WIDTH=800
@@ -224,15 +224,15 @@ build_flags =
     -D TFT_B4=4
     ; Panel Settings
     -D TFT_HSYNC_POLARITY=0
-    -D TFT_HSYNC_FRONT_PORCH=210
-    -D TFT_HSYNC_PULSE_WIDTH=30
-    -D TFT_HSYNC_BACK_PORCH=16
+    -D TFT_HSYNC_FRONT_PORCH=240  ; Maximum HSYNC Front Porch
+    -D TFT_HSYNC_PULSE_WIDTH=30   ; Typical HSYNC Pulse Width
+    -D TFT_HSYNC_BACK_PORCH=16    ; Typical HSYNC Back Porch
     -D TFT_VSYNC_POLARITY=0
-    -D TFT_VSYNC_FRONT_PORCH=22
-    -D TFT_VSYNC_PULSE_WIDTH=13
-    -D TFT_VSYNC_BACK_PORCH=10
+    -D TFT_VSYNC_FRONT_PORCH=32   ; Maximum VSYNC Front Porch
+    -D TFT_VSYNC_PULSE_WIDTH=13   ; Typical VSYNC Pulse Width
+    -D TFT_VSYNC_BACK_PORCH=10    ; Typical VSYNC Back Porch
     -D TFT_PCLK_ACTIVE_NEG=1
-    -D TFT_PREFER_SPEED=12000000
+    -D TFT_PREFER_SPEED=16000000  ; 1/2 of Typical DCLK Frequency
     -D TFT_AUTO_FLUSH=1
     ; Touch Settings
     -D TOUCH_WIDTH=800
