Update to ArduinoJson 6.21.2

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@ extra_configs =
     user_setups/lcd_config.ini
     ; --  Base configurations per platform
     user_setups/esp32/_esp32.ini
-    user_setups/esp32s2/_esp32s2.ini
+    ;user_setups/esp32s2/_esp32s2.ini
     user_setups/esp32s3/_esp32s3.ini
     ; --  Put active [env] files in this dir to be included in the build menu
     user_setups/active/*.ini
@@ -82,7 +82,7 @@ build_flags =
 ; -- Shared library dependencies in all environments
 ; Warning : don't put comments after github links => causes infinite download loop
 lib_deps =
-    bblanchon/ArduinoJson@^6.21.1
+    bblanchon/ArduinoJson@^6.21.2
     ;git+https://github.com/fvanroie/ConsoleInput.git
     ;git+https://github.com/andrethomas/TasmotaSlave.git
     ;git+https://github.com/lvgl/lvgl.git
