--- a/user_setups/esp32/_esp32.ini
+++ b/user_setups/esp32/_esp32.ini
@@ -54,6 +54,7 @@ build_flags =
     -D HASP_USE_TELNET=1
     ;-D HASP_USE_SPIFFS=1
     -D HASP_USE_LITTLEFS=1
+    -D HASP_USE_LVGL_TASK=0         ; Run LVGL in separate task
     ;-D HASP_USE_EEPROM=1
     -D HASP_USE_CONFIG=1            ; Native application, not library
     -D LV_LOG_TRACE_TIMER=1
